# trlc-dk1

./: .gitmodules  LICENSE  README.md  pyproject.toml
examples/: follower_read_position.py  follower_set_zero.py  leader_offset.ipynb  read_motor_params.py  teleop.py
hardware/follower_parts/: dm-adapter_v0.1.0.step  dm-adapter_v0.1.0.stl  dm-idler_v0.1.0.step  dm-idler_v0.1.0.stl  dm-shaft-extension_v0.1.0.step  dm-shaft-extension_v0.1.0.stl  link0-1_v0.1.0.step  link1-2-rest_v0.1.0.step  link1-2-rest_v0.1.0.stl  link1-2_v0.1.0.step  link2-3-frame_v0.1.0.step  link2-3-frame_v0.1.0.stl  link2-3_v0.1.0.step  link3-4-1-adjusted_v0.1.0.step  link3-4-1_v0.1.0.step  link3-4-2_v0.1.0.step  link3-4-frame_v0.1.0.step  link3-4-frame_v0.1.0.stl  link4-5_v0.1.0.step  link5-6-rest_v0.1.0.step  link5-6-rest_v0.1.0.stl  link5-6_v0.1.0.step
hardware/follower_parts/gripper/: block-adapter_v0.1.0.step  block-adapter_v0.1.0.stl  d405-camera-mount_v0.1.0.step  d405-camera-mount_v0.1.0.stl  finger_v0.1.0.step  finger_v0.1.0.stl  frame_v0.1.0.step  frame_v0.1.0.stl  gear-rack_v0.1.0.step  (+7 more)
prototyping/: arm_testing.ipynb  calibrate_gripper.py  calibrate_leader.py  cam_test.py  damiao_parameters.ipynb  damiao_testing.py  encoder_testing.py  gripper.py  gripper_calibration.py  gripper_control.ipynb  leader_torque_testing.ipynb  lerobot_testing.ipynb  motor_setup.py  teleop.py
prototyping/sketch_AS5600_readout/: sketch_AS5600_readout.ino
src/dk1/: dk1_follower.py  dk1_leader.py
src/trlc_dk1/: follower.py  follower_new.py  leader.py  leader_Feetech.py  teleop_feetech.py
(+5 files in other folders)
